2002-02-17  Ian Lance Taylor  <ian@airs.com>

	* Don Phillips: uustat.c (fsquery_show): Add space in the 0X case
	to make everything line up.
	* unix/status.c (fsysdep_get_status): Correct removal of trailing
	quote.

	* unix/serial.c (fsserial_open): Make sure that we can not set the
	ibaud field to zero for a terminal.
	(fsysdep_conn_io): Only use baud rate in delay calculations on a
	terminal.

2002-02-16  Ian Lance Taylor  <ian@airs.com>

	* configure.in: When checking for <sys/select.h>, only include
	<sys/time.h> if it exists.
	* configure: Rebuild.

	Raymond Nijssen: Support for hardware flow control on HP/UX.
	* unix/serial.c: Include <sys/termiox.h> if the system has it.
	(fsserial_hardflow): If HAVE_SYS_TERMIOX_H, use TCGETX/TCSETX to
	enable and disable hardware flow control.
	* configure.in: Check for existence of <sys/termiox.h>.
	* configure, config.h.in: Rebuild.

	* uucp.c (main): Check for unsupported whitespace in notification
	address.
	* uux.c (main): Likewise.

	* unix/splcmd.c (zsysdep_spool_commands): Check for unsupported
	use of white space.

2002-02-14  Ian Lance Taylor  <ian@airs.com>

	* unix/uid.c (fsuser_perms): Add piegid parameter.  Change all
	callers.
	(fsuucp_perms): Add iegid parameter.  Change all callers.
	* sysdep.h (fsuser_perms, fsuucp_perms): Update declarations.

	* John Hughes: uuconf.h (struct uuconf_system): Add
	uuconf_cmax_file_time field.
	* uuconf/syssub.c (SYSTEM_INTEGERS): Add cmax_file_time.
	* uuconf/tsinfo.c (asIcmds): Add max-file-time command.
	* trans.c (floop): Check maximum file send time.
	* uuchk.c (ukshow): Print maximum file send time.
	* uucp.texi (File Transfer Control): Document max-file-time.

	* send.c (flocal_send_await_reply): Only seek to the end of the
	file if we are already sending it.

	* trans.c (utransfree): If the file is open, close it.
	* rec.c (flocal_rec_await_reply): Don't bother closing the file on
	error.
	(fremote_send_reply): Likewise.  Set the e field to EFILECLOSED